# GroupB_Project

./: .dockerignore  .gitignore  Dockerfile  GroupB_Project5.py  LICENSE  README.md  Snakefile  biol5472_groupB_conda.yml  biol5472_groupB_config.yaml  environment.yml  pyproject.toml
.github/workflows/: ci.yml
src/: cli.py
src/Gene_Model_Summariser/: #GFF FILE VALIDATOR FUNCTIONS.py  #pillar 3 - HTML Report Generation.py  GroupB_Project5.py  Notes.py  QC_check.py  Snakefile  biol5472_groupB_config.yaml  build_gff.py  cli.py  fasta_validator.py  gff_parser.py  gff_validator.py  groupB.html  groupB.html.j2  html_generation.py  qc_flags_bed.py  run.json_builder.py  run_json_builder.py
src/Gene_Model_Summariser.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/Gene_Model_Summariser/templates/: groupB.html.j2
src/GroupB_tool.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: fasta_validator.py  test_bed_output.py  test_file_type.py  test_gff_parser.py  test_qc_check.py  writing_json_file.py
tests/Fixtures/: models.db  models.gff3  ref.fasta
